tests/testcases/errors/BCE0024-3.boo
"""
BCE0024-3.boo(8,7): BCE0024: The type 'Foo' does not have a visible constructor that matches the argument list '()'.
"""
class Foo:
	def constructor(item):
		pass
		
class Bar(Foo):
	pass
